tdf#113874 Guard against invalid states

Change-Id: I013dd4eb81f0fbef25d9f58e27fe72d800d910ba
Reviewed-on: https://gerrit.libreoffice.org/47702
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>
(cherry picked from commit d2763bde00f0f840585e1ec4c8f94c0ef804a580)