vcl/source/window/accessibility.cxx
@@ -143,6 +143,9 @@ css::uno::Reference< css::accessibility::XAccessible > Window::CreateAccessible(
 
 void Window::SetAccessible( const css::uno::Reference< css::accessibility::XAccessible >& x )
 {
+    if (!mpWindowImpl)
+        return;
+
     mpWindowImpl->mxAccessible = x;
 }
 
